should fix the show typing error on mobile too

--- a/typings-master/style.css
+++ b/typings-master/style.css
@@ -33,7 +33,7 @@ body {
 #command-center {
   margin: 0 0.4rem;
   margin-top: 3rem;
-  width: 100%;
+  width: 90%;
   max-width: 40rem;
   display: flex;
   flex-direction: column;
